phase 3 db stufff

--- a/map_phase3.html
+++ b/map_phase3.html
@@ -485,6 +485,7 @@
                             <!-- activity list MAP COL, need to find a way to make as many for each hardcoded place -->
                             <div class="col-md-6 col-12 hide-scrollbar" style="overflow: auto; height: 100vh;">
                                 <h2 class="my-3 text-lg-start text-center text-white">Sort Activities by Days</h2>
+                                <p>{{days}}</p>
 
                                 <div v-for="(day, id_index) in date_array">
         
