changed button design on map phase 3

--- a/map_phase3.html
+++ b/map_phase3.html
@@ -641,7 +641,7 @@
                         Your edits have been saved. 
                         </div>
                         <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-main-bold-fixed" data-bs-dismiss="modal">Close</button>
                         </div>
                     </div>
                     </div>
